# Speedy

./: README.md  dir.txt  package-lock.json  package.json
docs/: official_docs.txt  rust-core.txt
speedy-cli/: Cargo.toml
speedy-cli/docs/: guide.txt  speedy-commands.txt
speedy-cli/src/: main.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/SearchBar/: LightningIcon.tsx  SearchBar.css  SearchBar.tsx  useKeyboardShortcut.ts
