[package]
name = "speedy"
version = "0.1.0"
description = "A Spotlight-like search application"
authors = ["Jhay"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "speedy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.3.0", features = [] }
tauri-plugin-log = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-utils = "2.3.0"
tauri-macros = "2.3.0"
tauri-plugin-opener = "2.4.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rayon = "1.8"
walkdir = "2.4"
notify-rust = "4.11.7"
crossbeam-channel = "0.5"
num_cpus = "1.16"
rusqlite = { version = "0.31.0", features = ["bundled"] }
